# textadventure

./: .gitignore  Cargo.toml  LICENSE  Readme.md  adventure.example.yaml  adventure.yaml  index.html
assets/: style.css
src/: adventure.rs  audio.rs  game.rs  main.rs
