[package]
name = "textadventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
js-sys = "0.3.68"
log = "0.4.20"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.68", features = ["Window", "AudioContext", "Document", "Element", "HtmlElement", "Node", "OscillatorNode", "OscillatorType", "AudioParam", "AudioDestinationNode", "console", "GainNode", "HtmlLinkElement", "Storage", "Location"] }
